# LaunchPadInterpreter

./: README.md
ARDUINOBLUETOOTH/: ARDUINOBLUETOOTH.ino
ARDUINOPROJECTLED/: ARDUINOPROJECTLED.ino
Compilador/: Prueba.txt  lex.l  y.y
IDE-GUI v6/: 1.py  IDE-GUI.pro  bluetooth.cpp  bluetooth.h  chatclient.cpp  chatclient.h  img.qrc  keypresseater.cpp  keypresseater.h  lex.l  lex.yy.c  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  remoteselector.ui  test.txt  y.tab.c  y.tab.h  y.y
IDE-GUI v6/ARDUINOBT/: ARDUINOBT.ino
IDE-GUI v6/img/: Thumbs.db
IDE-GUI v6/logic/: ArduinoSentence.cpp  ArduinoSentence.h  Block.cpp  Block.h  Decrease.cpp  Decrease.h  Dow.cpp  Dow.h  ForTimes.cpp  ForTimes.h  If.cpp  If.h  Increase.cpp  Increase.h  Var.cpp  Var.h
IDE-GUI v6/untitled folder/: ArduinoSentence.cpp  ArduinoSentence.h  y.y
JUEGO3ARDUINO/: JUEGO3ARDUINO.ino
NEW/: NEW.ino
PROBANDOJOSECASI/: PROBANDOJOSECASI.ino
SemanticAnalysis/: CMakeLists.txt  main.cpp
SemanticAnalysis/LexYacc/: Prueba.cpp  Prueba.h  lex.l  lex.yy.c  main.cpp  test.txt  y.tab.c  y.tab.h  y.y
SemanticAnalysis/Logic/: Block.cpp  Block.h  ForTimes.cpp  ForTimes.h  Procedimiento.cpp  Procedimiento.h  Variable.cpp  Variable.h
TableLedArduino/: TableLedArduino.ino
TableLedGames/: TableLedGames.ino
prograBluetooth/: prograBluetooth.ino
